Connect google font to the project

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       href="%PUBLIC_URL%/manifest.json"
       crossorigin="use-credentials"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/2c7a82bc8a.js"
       crossorigin="anonymous"
@@ -38,7 +44,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Feast Your Eyes - Savour the Visual Symphony of Culinary Delights</title>
+    <title>
+      Feast Your Eyes - Savour the Visual Symphony of Culinary Delights
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
