--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Feast Your Eyes - Savour the Visual Symphony of Culinary Delights"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,7 +40,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Feast Your Eyes - Savour the Visual Symphony of Culinary Delights
+      Feast Your Eyes
     </title>
   </head>
   <body>
